--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Toxic Relationships - Am I Overreacting? #7</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>"AI" is Taking Over With New Pizza Delivery System</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>High-Energy Leaves | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>"ArthurHD"🥀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Why Vilva & Neem Are Dearest to Shiva | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Is Prop Trading in a bubble?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Learning to Maintain Your Center</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Don't Let Your Life Be Poisoned | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Japanese Bakery with 80-Year-Old Grandmas</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -878,9 +878,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=hlWYz-9SzE4" target="_blank">
-                    <img src="https://i.ytimg.com/vi/hlWYz-9SzE4/mqdefault.jpg" alt="Try not to Laugh: TikTok Couples Cringe">
+                    <img src="https://i.ytimg.com/vi/hlWYz-9SzE4/mqdefault.jpg" alt="TikTok Couples are Giving me the Ick">
                     <div class="video-info">
-                        <h3>Try not to Laugh: TikTok Couples Cringe</h3>
+                        <h3>TikTok Couples are Giving me the Ick</h3>
                         <div class="channel">ItalianBach</div>
                         <div class="date">6 days ago</div>
                     </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Is Prop Trading in a bubble?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>High-Energy Leaves | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why Vilva & Neem Are Dearest to Shiva | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Learning to Maintain Your Center</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Don't Let Your Life Be Poisoned | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>"AI" is Taking Over With New Pizza Delivery System</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Toxic Relationships - Am I Overreacting? #7</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>"ArthurHD"🥀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Japanese Bakery with 80-Year-Old Grandmas</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10481,9 +10481,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=hlWYz-9SzE4" target="_blank">
-                        <img src="https://i.ytimg.com/vi/hlWYz-9SzE4/mqdefault.jpg" alt="Try not to Laugh: TikTok Couples Cringe">
+                        <img src="https://i.ytimg.com/vi/hlWYz-9SzE4/mqdefault.jpg" alt="TikTok Couples are Giving me the Ick">
                         <div class="video-info">
-                            <h3>Try not to Laugh: TikTok Couples Cringe</h3>
+                            <h3>TikTok Couples are Giving me the Ick</h3>
                             <div class="channel">ItalianBach</div>
                             <div class="date">6 days ago</div>
                         </div>
